# new_lostfilmatv

./: .gitattributes  .gitignore  AGENTS.md  DEVELOPMENT.md  HOWTO_CONNECT.md  LICENSE  PROGRESS.md  README.md  build.gradle.kts  gradle.properties  install_openwrt_proxmox.sh  settings.gradle.kts  v_search_sample.html
backend/auth_bridge/backend/: Dockerfile  pyproject.toml
backend/auth_bridge/backend/src/auth_bridge/: __init__.py  config.py  logging_utils.py  main.py
backend/auth_bridge/backend/src/auth_bridge/api/: __init__.py  health.py  kinopoisk.py  pairings.py  phone_flow.py  security_headers.py  tmdb.py  translation.py  wildcard_proxy.py
backend/auth_bridge/backend/src/auth_bridge/middleware/: rate_limit.py
backend/auth_bridge/backend/src/auth_bridge/schemas/: pairing.py  session_payload.py  translation.py
backend/auth_bridge/backend/src/auth_bridge/services/: kinopoisk_proxy_service.py  lostfilm_auth_detector.py  (+8 more)
backend/auth_bridge/backend/src/lostfilm_auth_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/auth_bridge/backend/tests/: test_config.py  test_health.py  test_logging_utils.py  test_lostfilm_auth_detector.py  test_lostfilm_login_client.py  test_lostfilm_proxy_service.py  test_pairing_service.py  test_pairings.py  test_phone_flow.py  test_rate_limit.py  test_tmdb_api.py  test_tmdb_proxy_service.py  test_translation_api.py  test_translation_service.py  test_trusted_device_service.py  test_wildcard_proxy.py
backend/auth_bridge/backend/tests/fixtures/: lostfilm-challenge-page.html  lostfilm-login-page.html
(+326 files in other folders)
